BAP-9965 Workflow progress line overlaps page navigation block; fixed styles; added logic that tracks workflow progress block width

--- a/src/Oro/Bundle/UIBundle/Resources/public/css/less/mobile/page-header.less
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/less/mobile/page-header.less
@@ -10,10 +10,6 @@
   padding-right: 0;
   padding-left: 0;
 }
-.breadcrumb-pin #before-content-addition {
-  order: 1;
-  margin: 0 auto;
-}
 .container-fluid.page-title {
   margin-bottom: 10px;
 }
