--- a/src/Oro/Bundle/WorkflowBundle/Resources/public/css/less/workflow.less
+++ b/src/Oro/Bundle/WorkflowBundle/Resources/public/css/less/workflow.less
@@ -9,13 +9,15 @@
   }
 }
 .workflow-steps-placeholder {
-  order: 500;
+  display: block;
+  overflow: hidden;
   margin: 0 auto;
+  text-align: center;
 }
 .workflow-step-list {
   list-style: none outside none;
   margin: 0;
-  height: 32px;
+  line-height: 0;
   li:before {
     background: url("../../images/workflow-sprite.png") no-repeat 50% -8px;
     width:100%;
